--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10.11"
 polars = "^0.20.31"
+requests = "^2.32.3"
 
 [build-system]
 requires = ["poetry-core"]
