--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10.11"
 polars = "^0.20.31"
 requests = "^2.32.3"
+pytest = "^8.2.2"
 
 [build-system]
 requires = ["poetry-core"]
